fixed mobile overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -695,14 +695,6 @@ video {
   flex-wrap: wrap;
 }
 
-.flex-wrap-reverse{
-  flex-wrap: wrap-reverse;
-}
-
-.flex-nowrap{
-  flex-wrap: nowrap;
-}
-
 .items-center{
   align-items: center;
 }
@@ -1023,6 +1015,7 @@ video {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: auto;
 }
 
 .swiper-slide img {
@@ -1031,6 +1024,11 @@ video {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .hover\:bg-pink-300:hover{
